# mcoreutils

./: .gitignore  LICENSE  README.md  generate.sh  pyproject.toml  sync.sh
.github/workflows/: python-publish.yml
examples/: mcutils.yml  tcpserver.yml
proto/mcutils/: meshcore.proto
src/mcoreutils/: main.py  tcp_bridge.py
src/mcutils/: client.py  common.py  main.py  mcutils.py  meshcore_pb2.py  meshcore_pb2.pyi  meshcore_pb2_grpc.py  serial_tcp_server.py  server.py  tcp_client.py  tcp_server.py
