[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcutils"
version = "0.1"
authors = [
    { name = "Drew Gochenaur" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=5.0",
    "platformdirs>=4.3",
    "meshcore",
    "folium",
    "grpcio>=1.60"
]

[project.scripts]
mcutils = "mcutils.main:main"
mc-serial-tcp-server = "mcutils.serial_tcp_server:main"

[tool.black]
line-length = 160

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"