[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcoreutils"
version = "0.1"
authors = [
    { name = "Drew Gochenaur" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=5.0",
    "platformdirs>=4.3",
    "meshcore",
    "folium",
    "grpcio>=1.60"
]

[project.scripts]
mcore-cli = "mcoreutils.main:main"
mcore-tcp-bridge = "mcoreutils.tcp_bridge:main"

[tool.black]
line-length = 160

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"